# rfrazier716.github.io

./: .gitignore  CNAME  airt_header.rst  archive.html  conf.py  index.html  pyproject.toml  readme.md  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
2021/: index.html
2022/: index.html
about/: index.html
bsp_2d/: bisect.py  bisect_stub.py  build_tree.py  points.csv
categories/: adventures-in-ray-tracing.xml  agile.xml  analysis.xml  cat_product.xml  cat_programming.html  cat_programming.xml  constructive-solid-geometry.xml  csg.xml  data-science.xml  git.xml  github.html  github.xml  graphics.xml  index.html  jupyter.xml  music.xml  nikola.html  nikola.xml  numpy.xml  product-management.xml  product-owner.xml  pyrayt.xml  python.xml  ray-tracing.xml  rendering.xml  rst.html  rst.xml  rust.xml  scrum.xml  story-mapping.xml  video-games.xml
data/: projects.yml
efficient_csg/: csg.py  test_cases.py
galleries/: index.html  rss.xml
listings/: index.html
pages/: about.html  about.rst  index.html  projects.html  projects.rst  resume.html  resume.rst
posts/: 2d-binary-spacing-partitioning-with-python-and-networkx.rst  5-video-game-soundtracks-to-jam-out-to-while-coding.rst  adventures-in-ray-tracing-ray-cube-intersections.html  adventures-in-ray-tracing-ray-cube-intersections.rst  data-science-vcs.rst  design_a_camera_1.rst  design_a_camera_2.rst  designing-a-camera-with-python-and-pyrayt.rst  efficient-csg.rst  geometric-ray-tracing-with-python.rst  getting-up-and-running-with-nikola.html  getting-up-and-running-with-nikola.rst  index.html  (+3 more)
(+72 files in other folders)
