[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My Personal Website"
authors = ["Ryan Frazier"]

[tool.poetry.dependencies]
python = "^3.8"
Nikola = {extras = ["extras"], version = "^8.1.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
